# ClangTemplate

./: .clang-format  CMakeLists.txt  CMakePresets.json  run_debug.bat
include/: matrix.h
src/: main.cpp
